@@ -103,6 +103,22 @@ filebeat.config.{{ reload_type|default("prospectors") }}:
   {% endif -%}
 {% endif -%}
 
+#============================== Autodiscover ==================================
+
+{% if autodiscover %}
+filebeat.autodiscover:
+  providers:
+  {%- for provider, settings in autodiscover.items() %}
+  - type: {{provider}}
+    {%- if settings %}
+    {%- for k, v in settings.items() %}
+    {{k}}:
+      {{v | default([])}}
+    {%- endfor %}
+    {%- endif %}
+  {%- endfor %}
+{% endif %}
+
 #================================ General =====================================
 
 # The name of the shipper that publishes the network data. It can be used to group
